// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseNotification gets icon correctly for each status 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "marginHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.8}
      style={
        {
          "backgroundColor": "#000000cc",
          "borderRadius": 8,
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "marginRight": 15,
          }
        }
      >
        <View
          style={
            {
              "borderColor": "#f3f5f9",
              "borderRadius": 64,
              "borderWidth": 3.5,
              "height": 36,
              "width": 36,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 40,
                "left": -5.5,
                "position": "relative",
                "top": -5.5,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
                "width": 40,
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#4459ff",
                    "fontSize": 36,
                  },
                  undefined,
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰝲
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "color": "#ffffff",
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontFamily": "CentraNo1-Bold",
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 18,
                "marginBottom": 2,
              },
            ]
          }
          testID="notification-title"
        >
          Testing Title
        </Text>
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontSize": 12,
                "lineHeight": 18,
              },
            ]
          }
        >
          Testing description
        </Text>
      </View>
      <View />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`BaseNotification gets icon correctly for each status 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "marginHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.8}
      style={
        {
          "backgroundColor": "#000000cc",
          "borderRadius": 8,
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "marginRight": 15,
          }
        }
      >
        <View
          style={
            {
              "borderColor": "#f3f5f9",
              "borderRadius": 64,
              "borderWidth": 3.5,
              "height": 36,
              "width": 36,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 40,
                "left": -5.5,
                "position": "relative",
                "top": -5.5,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
                "width": 40,
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#4459ff",
                    "fontSize": 36,
                  },
                  undefined,
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰝲
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "color": "#ffffff",
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontFamily": "CentraNo1-Bold",
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 18,
                "marginBottom": 2,
              },
            ]
          }
          testID="notification-title"
        >
          Testing Title
        </Text>
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontSize": 12,
                "lineHeight": 18,
              },
            ]
          }
        >
          Testing description
        </Text>
      </View>
      <View />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`BaseNotification gets icon correctly for each status 3`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "marginHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.8}
      style={
        {
          "backgroundColor": "#000000cc",
          "borderRadius": 8,
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "marginRight": 15,
          }
        }
      >
        <View
          style={
            {
              "borderColor": "#f3f5f9",
              "borderRadius": 64,
              "borderWidth": 3.5,
              "height": 36,
              "width": 36,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 40,
                "left": -5.5,
                "position": "relative",
                "top": -5.5,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
                "width": 40,
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#4459ff",
                    "fontSize": 36,
                  },
                  undefined,
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰝲
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "color": "#ffffff",
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontFamily": "CentraNo1-Bold",
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 18,
                "marginBottom": 2,
              },
            ]
          }
          testID="notification-title"
        >
          Testing Title
        </Text>
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontSize": 12,
                "lineHeight": 18,
              },
            ]
          }
        >
          Testing description
        </Text>
      </View>
      <View />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`BaseNotification gets icon correctly for each status 4`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "marginHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.8}
      style={
        {
          "backgroundColor": "#000000cc",
          "borderRadius": 8,
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "marginRight": 15,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#457a39",
                "fontSize": 36,
              },
              undefined,
              {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          {
            "color": "#ffffff",
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontFamily": "CentraNo1-Bold",
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 18,
                "marginBottom": 2,
              },
            ]
          }
          testID="notification-title"
        >
          Testing Title
        </Text>
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontSize": 12,
                "lineHeight": 18,
              },
            ]
          }
        >
          Testing description
        </Text>
      </View>
      <View />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`BaseNotification gets icon correctly for each status 5`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "marginHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.8}
      style={
        {
          "backgroundColor": "#000000cc",
          "borderRadius": 8,
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "marginRight": 15,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#457a39",
                "fontSize": 36,
              },
              undefined,
              {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          {
            "color": "#ffffff",
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontFamily": "CentraNo1-Bold",
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 18,
                "marginBottom": 2,
              },
            ]
          }
          testID="notification-title"
        >
          Testing Title
        </Text>
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontSize": 12,
                "lineHeight": 18,
              },
            ]
          }
        >
          Testing description
        </Text>
      </View>
      <View />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`BaseNotification gets icon correctly for each status 6`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "marginHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.8}
      style={
        {
          "backgroundColor": "#000000cc",
          "borderRadius": 8,
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "marginRight": 15,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#457a39",
                "fontSize": 36,
              },
              undefined,
              {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          {
            "color": "#ffffff",
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontFamily": "CentraNo1-Bold",
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 18,
                "marginBottom": 2,
              },
            ]
          }
          testID="notification-title"
        >
          Testing Title
        </Text>
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontSize": 12,
                "lineHeight": 18,
              },
            ]
          }
        >
          Testing description
        </Text>
      </View>
      <View />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`BaseNotification gets icon correctly for each status 7`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "marginHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.8}
      style={
        {
          "backgroundColor": "#000000cc",
          "borderRadius": 8,
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "marginRight": 15,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#457a39",
                "fontSize": 36,
              },
              undefined,
              {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          {
            "color": "#ffffff",
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontFamily": "CentraNo1-Bold",
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 18,
                "marginBottom": 2,
              },
            ]
          }
          testID="notification-title"
        >
          Testing Title
        </Text>
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontSize": 12,
                "lineHeight": 18,
              },
            ]
          }
        >
          Testing description
        </Text>
      </View>
      <View />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`BaseNotification gets icon correctly for each status 8`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "marginHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.8}
      style={
        {
          "backgroundColor": "#000000cc",
          "borderRadius": 8,
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "marginRight": 15,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#ca3542",
                "fontSize": 36,
              },
              undefined,
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰗖
        </Text>
      </View>
      <View
        style={
          {
            "color": "#ffffff",
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontFamily": "CentraNo1-Bold",
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 18,
                "marginBottom": 2,
              },
            ]
          }
          testID="notification-title"
        >
          Testing Title
        </Text>
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontSize": 12,
                "lineHeight": 18,
              },
            ]
          }
        >
          Testing description
        </Text>
      </View>
      <View />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`BaseNotification gets icon correctly for each status 9`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "marginHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.8}
      style={
        {
          "backgroundColor": "#000000cc",
          "borderRadius": 8,
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "marginRight": 15,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#ca3542",
                "fontSize": 36,
              },
              undefined,
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰗖
        </Text>
      </View>
      <View
        style={
          {
            "color": "#ffffff",
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontFamily": "CentraNo1-Bold",
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 18,
                "marginBottom": 2,
              },
            ]
          }
          testID="notification-title"
        >
          Testing Title
        </Text>
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#ffffff",
                "flex": 1,
                "fontSize": 12,
                "lineHeight": 18,
              },
            ]
          }
        >
          Testing description
        </Text>
      </View>
      <View />
    </TouchableOpacity>
  </View>
</View>
`;
